- Add support for divide and conquer inference with `BASiCS_DivideAndConquer`
  function. Add support for this function to `BASiCS_MCMC`
- Add `BASiCS_MockSCE` function to create a SingleCellExperiment 
  object with arbitrary dimensions.
- Fix Makevars warning relating to PKG_CXXFLAGS

version 2.1.16 (2020-10-22)
- Updates `.BASiCS_MCMC_Start` to use different starting values when an 
empirical Bayes prior is assigned to mu
- Adds `log_scale` parameter to  `.EmpiricalBayesMu`
- Fixes small bug in `.BASiCS_MCMC_Start`
- Updates unit tests linked to the change in `.BASiCS_MCMC_Start`
- Adds fixed seeds to `test_divide_and_conquer.R`

version 2.3.1 (2020-12-14)
- scaling of `mu.mu` in `.EmpiricalBayesMu` to match the scale given by spike-ins
- scaling of `mu0` in `.BASiCS_MCMC_Start` to match the scale given by spike-ins
when using an EB prior for mu
- lower minimum tolerance `mintol_mu` (1e-5 instead of 1e-3) as a default value
in `.BASiCS_MCMC_ExtraArgs`

version 2.3.2 (2021-04-14)
- Bug fixes in handling of divide and conquer inference.

version 2.3.3: (2021-04-14)
- Version bump to trigger new build

version 2.3.4: (2021-04-18)
- Add missing import from scran

version 2.5.1 (2021-05-19)
- Add error condition for unnamed cells.

version 2.5.2 (2021-08-11)
- Add better spacing around EFDR message.
- Fix ggplot2 `guide=FALSE` warnings
- Remove an errant browser() call

version 2.5.3 (2021-08-11)
- Add GeneExponent and CellExponent settings for divide and conquer.

version 2.5.4 (2021-08-24)
- Ensure ordering of genes in chains is consistent with input data
  when using divide and conquer

version 2.5.5 (2021-08-24)
- Bugfix tests with change in BiocParallel behaviour

version 2.5.6 (2021-10-05)
- Revert 2.5.5 changes; add expectation to empty tests.

version 2.5.7 (2021-10-05)
- Fix tests for BiocParallel behaviour.

version 2.5.8 (2021-11-01)
- Add FixNu argument to fix scaling parameters to scran normalisation factors
  when WithSpikes=FALSE